# simple_rust_sensor_service

./: Cargo.toml  README.md
src/: main.rs
