[package]
name = "simple_rust_sensor_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.23.1"
async-nats = "0.23.0"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.21"
log = "0.4.0"
env_logger = "0.9.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
bytes = "1.3.0"
